--- a/API_GestaoFinanceira/appsettings.json
+++ b/API_GestaoFinanceira/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Database=DbAPI2; Username=gustavo_db;Password=1234"
+        "DefaultConnection": "Host=localhost;Database=VARIABLE; Username=VARIABLE;Password=VARIABLE"
     },
     "AllowedHosts": "*"
 }
